--- a/css/home.css
+++ b/css/home.css
@@ -174,7 +174,7 @@ ol {
 	50% {
 		-webkit-transform: rotate(180deg);
 		transform: rotate(180deg);
-		border: 4px solid brown;
+		border: 4px solid #AF8B87;
 		border-left-color: transparent;
 	}
 	100% {
@@ -193,7 +193,7 @@ ol {
 	}
 	50% {
 		-webkit-transform: rotate(180deg);
-		border: 4px solid brown;
+		border: 4px solid #AF8B87;
 		border-left-color: transparent;
 	}
 	100% {
@@ -583,7 +583,7 @@ ol {
 	font-size: 18px;
 	height: 50px;
 	width: 50px;
-	background: #7fad39;
+	background: pink;
 	line-height: 50px;
 	text-align: center;
 	border-radius: 50%;
@@ -623,7 +623,7 @@ ol {
 }
 
 .featured {
-	padding-top: 80px;
+	padding-top: 10px;
 	padding-bottom: 40px;
 }
 
@@ -652,7 +652,7 @@ ol {
 	bottom: -2px;
 	width: 100%;
 	height: 2px;
-	background: #7fad39;
+	background: pink;
 	content: "";
 	opacity: 0;
 }
