--- a/css/pagephu.css
+++ b/css/pagephu.css
@@ -4,7 +4,6 @@ body {
 	height: 100%;
 	font-family: "Cairo", sans-serif;
 	-webkit-font-smoothing: antialiased;
-
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -87,7 +86,7 @@ ol {
 	right: 0;
 	height: 4px;
 	width: 80px;
-	background: #7fad39;
+	background: #FFBFCC;
 	content: "";
 	margin: 0 auto;
 }
@@ -125,31 +124,33 @@ ol {
 	color: #ffffff;
 	text-transform: uppercase;
 	font-weight: 700;
-	background: #7fad39;
+	background: #FFBFCC;
 	letter-spacing: 2px;
 }
 
 .site-btn {
-	font-size: 20px;
+	font-size: 18px;
 	color: #ffffff;
+	font-weight: 800;
 	text-transform: uppercase;
 	display: inline-block;
 	padding: 13px 30px 12px;
-	background: #7fad39;
+	background: #FFBFCC;
 	border: none;
-	margin-left: 400px;
+	margin-left: 470px;
 }
 
 .site-btn1 {
-	font-size: 20px;
+	font-size: 18px;
 	color: #ffffff;
+	font-weight: 800;
 	text-transform: uppercase;
 	display: inline-block;
 	padding: 13px 30px 12px;
-	background: #7fad39;
+	background: #FFBFCC;
 	border: none;
-	margin-left: 100px;
 }
+
 /* Preloder */
 
 #preloder {
@@ -159,7 +160,7 @@ ol {
 	top: 0;
 	left: 0;
 	z-index: 999999;
-	background: rgb(0, 78, 0);
+	background: pink;
 }
 
 .loader {
@@ -179,19 +180,19 @@ ol {
 	0% {
 		-webkit-transform: rotate(0deg);
 		transform: rotate(0deg);
-		border: 4px solid #00d836;
+		border: 4px solid palevioletred;
 		border-left-color: transparent;
 	}
 	50% {
 		-webkit-transform: rotate(180deg);
 		transform: rotate(180deg);
-		border: 4px solid red;
+		border: 4px solid #AF8B87;
 		border-left-color: transparent;
 	}
 	100% {
 		-webkit-transform: rotate(360deg);
 		transform: rotate(360deg);
-		border: 4px solid #00d836;
+		border: 4px solid palevioletred;
 		border-left-color: transparent;
 	}
 }
@@ -199,17 +200,17 @@ ol {
 @-webkit-keyframes loader {
 	0% {
 		-webkit-transform: rotate(0deg);
-		border: 4px solid #00d836;
+		border: 4px solid palevioletred;
 		border-left-color: transparent;
 	}
 	50% {
 		-webkit-transform: rotate(180deg);
-		border: 4px solid red;
+		border: 4px solid #AF8B87;
 		border-left-color: transparent;
 	}
 	100% {
 		-webkit-transform: rotate(360deg);
-		border: 4px solid #00d836;
+		border: 4px solid palevioletred;
 		border-left-color: transparent;
 	}
 }
@@ -219,7 +220,7 @@ ol {
 -----------------------*/
 
 .header__top {
-	background: hsl(109, 100%, 89%);
+	background: #FFE0ED;
 }
 
 .header__top__left {
@@ -304,7 +305,7 @@ ol {
 .header__menu {
 	padding: 20px 0;
 	text-align: center;
-	background-color: hsl(109, 100%, 89%);
+	background-color: white;
 	list-style-type: none;
 	text-decoration: none;
 }
@@ -340,7 +341,7 @@ ol {
 }
 
 .header__menu ul li .header__menu__dropdown li:hover>a {
-	color: #7fad39;
+	color: #AF8B87;
 }
 
 .header__menu ul li .header__menu__dropdown li a {
@@ -351,7 +352,7 @@ ol {
 }
 
 .header__menu ul li.active a {
-	color: #7fad39;
+	color: #FFBFCC;
 }
 
 .header__menu ul li:hover .header__menu__dropdown {
@@ -361,7 +362,7 @@ ol {
 }
 
 .header__menu ul li:hover>a {
-	color: #7fad39;
+	color: #AF8B87;
 }
 
 .header__menu ul li:last-child {
@@ -415,7 +416,7 @@ ol {
 .header__cart ul li a span {
 	height: 13px;
 	width: 13px;
-	background: #7fad39;
+	background: #FFBFCC;
 	font-size: 10px;
 	color: #ffffff;
 	line-height: 13px;
@@ -478,7 +479,7 @@ ol {
 }
 
 .hero__categories__all {
-	background: #7fad39;
+	background: #FFBFCC;
 	position: relative;
 	padding: 10px 25px 10px 40px;
 	cursor: pointer;
@@ -594,7 +595,7 @@ ol {
 	font-size: 18px;
 	height: 50px;
 	width: 50px;
-	background: #7fad39;
+	background: pink;
 	line-height: 50px;
 	text-align: center;
 	border-radius: 50%;
@@ -618,7 +619,7 @@ ol {
 	text-transform: uppercase;
 	font-weight: 700;
 	letter-spacing: 4px;
-	color: #7fad39;
+	color: #FFBFCC;
 }
 
 .hero__text h2 {
@@ -632,7 +633,6 @@ ol {
 .hero__text p {
 	margin-bottom: 35px;
 }
-
 /*---------------------
   Categories
 -----------------------*/
@@ -677,7 +677,6 @@ ol {
 	position: absolute;
 	left: -35px;
 	top: 50%;
-
 	background: #ffffff;
 }
 
@@ -691,7 +690,7 @@ ol {
 -----------------------*/
 
 .featured {
-	padding-top: 80px;
+	padding-top: 10px;
 	padding-bottom: 40px;
 }
 
@@ -720,7 +719,7 @@ ol {
 	bottom: -2px;
 	width: 100%;
 	height: 2px;
-	background: #7fad39;
+	background: pink;
 	content: "";
 	opacity: 0;
 }
@@ -731,6 +730,9 @@ ol {
 
 .featured__item {
 	margin-bottom: 50px;
+	border: 1px solid pink;
+	padding: 10px;
+
 }
 
 .featured__item:hover .featured__item__pic .featured__item__pic__hover {
@@ -738,10 +740,11 @@ ol {
 }
 
 .featured__item__pic {
-	height: 270px;
+	height: 150px;
 	position: relative;
 	overflow: hidden;
 	background-position: center center;
+	background-size: contain !important;
 }
 
 .featured__item__pic__hover {
@@ -926,9 +929,9 @@ ol {
 
 .breadcrumb__text h2 {
 	font-size: 46px;
-	color: green;
+	color: #ffffff;
 	font-weight: 700;
-	background-color: white;
+	background-color: pink;
 	margin-left: 400px;
 	margin-right: 400px;
 }
@@ -1551,7 +1554,7 @@ ol {
 }
 
 .product__details__pic__item img {
-	min-width: 100%;
+	min-width: 40%;
 }
 
 .product__details__pic__slider img {
@@ -1562,7 +1565,7 @@ ol {
 	width: auto;
 }
 
-.product__details__text h3 {
+.product__details__text h5 {
 	color: #252525;
 	font-weight: 700;
 	margin-bottom: 16px;
@@ -1584,7 +1587,7 @@ ol {
 }
 
 .product__details__text .product__details__price {
-	font-size: 30px;
+	font-size: 20px;
 	color: #dd2222;
 	font-weight: 600;
 	margin-bottom: 15px;
@@ -1615,7 +1618,7 @@ ol {
 }
 
 .product__details__text ul li {
-	font-size: 16px;
+	font-size: 14px;
 	color: #1c1c1c;
 	list-style: none;
 	line-height: 36px;
@@ -1695,7 +1698,7 @@ ol {
 	left: 0;
 	top: 12px;
 	height: 1px;
-	width: 370px;
+	width: 300px;
 	background: #ebebeb;
 	content: "";
 }
@@ -1705,7 +1708,7 @@ ol {
 	right: 0;
 	top: 12px;
 	height: 1px;
-	width: 370px;
+	width: 300px;
 	background: #ebebeb;
 	content: "";
 }
@@ -1755,7 +1758,197 @@ ol {
 	margin-bottom: 70px;
 }
 
+/*---------------------
+  Shop Cart
+-----------------------*/
 
+.shoping-cart {
+	padding-top: 80px;
+	padding-bottom: 80px;
+}
+
+.shoping__cart__table {
+	margin-bottom: 30px;
+}
+
+.shoping__cart__table table {
+	width: 100%;
+	text-align: center;
+}
+
+.shoping__cart__table table thead tr {
+	border-bottom: 1px solid #ebebeb;
+}
+
+.shoping__cart__table table thead th {
+	font-size: 20px;
+	font-weight: 700;
+	color: #1c1c1c;
+	padding-bottom: 20px;
+}
+
+.shoping__cart__table table thead th.shoping__product {
+	text-align: left;
+}
+
+.shoping__cart__table table tbody tr td {
+	padding-top: 30px;
+	padding-bottom: 30px;
+	border-bottom: 1px solid #ebebeb;
+}
+
+.shoping__cart__table table tbody tr td.shoping__cart__item {
+	width: 630px;
+	text-align: left;
+}
+
+.shoping__cart__table table tbody tr td.shoping__cart__item img {
+	display: inline-block;
+	margin-right: 25px;
+}
+
+.shoping__cart__table table tbody tr td.shoping__cart__item h5 {
+	color: #1c1c1c;
+	display: inline-block;
+}
+
+.shoping__cart__table table tbody tr td.shoping__cart__price {
+	font-size: 18px;
+	color: #1c1c1c;
+	font-weight: 700;
+	width: 100px;
+}
+
+.shoping__cart__table table tbody tr td.shoping__cart__total {
+	font-size: 18px;
+	color: #1c1c1c;
+	font-weight: 700;
+	width: 110px;
+}
+
+.shoping__cart__table table tbody tr td.shoping__cart__item__close {
+	text-align: right;
+}
+
+.shoping__cart__table table tbody tr td.shoping__cart__item__close span {
+	font-size: 24px;
+	color: #b2b2b2;
+	cursor: pointer;
+}
+
+.shoping__cart__table table tbody tr td.shoping__cart__quantity {
+	width: 225px;
+}
+
+.shoping__cart__table table tbody tr td.shoping__cart__quantity .pro-qty {
+	width: 120px;
+	height: 40px;
+}
+
+.shoping__cart__table table tbody tr td.shoping__cart__quantity .pro-qty input {
+	color: #1c1c1c;
+}
+
+.shoping__cart__table table tbody tr td.shoping__cart__quantity .pro-qty input::placeholder {
+	color: #1c1c1c;
+}
+
+.shoping__cart__table table tbody tr td.shoping__cart__quantity .pro-qty .qtybtn {
+	width: 15px;
+}
+
+.primary-btn.cart-btn {
+	color: #6f6f6f;
+	padding: 14px 30px 12px;
+	background: #f5f5f5;
+}
+
+.primary-btn.cart-btn span {
+	font-size: 14px;
+}
+
+.primary-btn.cart-btn.cart-btn-right {
+	float: right;
+}
+
+.shoping__discount {
+	margin-top: 45px;
+}
+
+.shoping__discount h5 {
+	font-size: 20px;
+	color: #1c1c1c;
+	font-weight: 700;
+	margin-bottom: 25px;
+}
+
+.shoping__discount form input {
+	width: 255px;
+	height: 46px;
+	border: 1px solid #cccccc;
+	font-size: 16px;
+	color: #b2b2b2;
+	text-align: center;
+	display: inline-block;
+	margin-right: 15px;
+}
+
+.shoping__discount form input::placeholder {
+	color: #b2b2b2;
+}
+
+.shoping__discount form button {
+	padding: 15px 30px 11px;
+	font-size: 12px;
+	letter-spacing: 4px;
+	background: #6f6f6f;
+}
+
+.shoping__checkout {
+	background: #f5f5f5;
+	padding: 30px;
+	padding-top: 20px;
+	margin-top: 50px;
+}
+
+.shoping__checkout h5 {
+	color: #1c1c1c;
+	font-weight: 700;
+	font-size: 20px;
+	margin-bottom: 28px;
+}
+
+.shoping__checkout ul {
+	margin-bottom: 28px;
+}
+
+.shoping__checkout ul li {
+	font-size: 16px;
+	color: #1c1c1c;
+	font-weight: 700;
+	list-style: none;
+	overflow: hidden;
+	border-bottom: 1px solid #ebebeb;
+	padding-bottom: 13px;
+	margin-bottom: 18px;
+}
+
+.shoping__checkout ul li:last-child {
+	padding-bottom: 0;
+	border-bottom: none;
+	margin-bottom: 0;
+}
+
+.shoping__checkout ul li span {
+	font-size: 18px;
+	color: #dd2222;
+	float: right;
+}
+
+.shoping__checkout .primary-btn {
+	display: block;
+	text-align: center;
+}
 
 /*---------------------
   Checkout
@@ -1786,13 +1979,12 @@ ol {
 	color: #999999;
 }
 
-.checkout__form h3 {
+.checkout__form h4 {
 	color: #1c1c1c;
-	font-weight: 400;
+	font-weight: 700;
 	border-bottom: 1px solid #e1e1e1;
 	padding-bottom: 20px;
 	margin-bottom: 25px;
-	text-align: center;
 }
 
 .checkout__form p {
@@ -1801,11 +1993,10 @@ ol {
 
 .checkout__input {
 	margin-bottom: 24px;
-	
 }
 
 .checkout__input p {
-	color: #000000;
+	color: #1c1c1c;
 	margin-bottom: 20px;
 }
 
@@ -1815,11 +2006,10 @@ ol {
 
 .checkout__input input {
 	width: 100%;
-	height: 46px;
-	border: 1px solid #919191;
-	padding-left: 20px;
+	height: 40px;
+	border: 1px solid gray;
 	font-size: 16px;
-	color: #000000;
+	color: black;
 	border-radius: 4px;
 }
 
@@ -1964,9 +2154,6 @@ ol {
 	margin-top: 10px;
 }
 
-.form-select{
-	text-align: left;
-}
 /*---------------------
   Blog
 -----------------------*/
@@ -2311,7 +2498,7 @@ ol {
   Footer
 -----------------------*/
 .footer {
-	background: hsl(109, 100%, 89%);
+	background: #FFE0ED;
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
