xong phần đặt hàng

--- a/css/style.css
+++ b/css/style.css
@@ -1919,6 +1919,8 @@ ol {
 .shoping__cart__table table tbody tr td.shoping__cart__item img {
 	display: inline-block;
 	margin-right: 25px;
+	width: 100px !important;
+	height: 100px !important;
 }
 
 .shoping__cart__table table tbody tr td.shoping__cart__item h5 {
