--- a/css/xemsanpham.css
+++ b/css/xemsanpham.css
@@ -1805,6 +1805,9 @@ ol {
 .shoping__cart__table table tbody tr td.shoping__cart__item img {
 	display: inline-block;
 	margin-right: 25px;
+	width: 100px !important;
+	height: 100px !important;
+
 }
 
 .shoping__cart__table table tbody tr td.shoping__cart__item h5 {
