xong phần lấy danh sach thanh toán

--- a/css/home.css
+++ b/css/home.css
@@ -938,7 +938,7 @@ ol {
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
-		background: #7fad39;
+		background: #E18AAC;
 		font-size: 10px;
 		color: #ffffff;
 		line-height: 13px;
@@ -1004,7 +1004,7 @@ ol {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
-		color: #7fad39;
+		color: #E18AAC;
 	}
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
@@ -1195,7 +1195,7 @@ ol {
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
-		background: #7fad39;
+		background: #E18AAC;
 		font-size: 10px;
 		color: #ffffff;
 		line-height: 13px;
@@ -1261,7 +1261,7 @@ ol {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
-		color: #7fad39;
+		color: #E18AAC;
 	}
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
