--- a/css/pagephu.css
+++ b/css/pagephu.css
@@ -782,8 +782,8 @@ ol {
 }
 
 .featured__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #E18AAC;
+	border-color: #E18AAC;
 }
 
 .featured__item__pic__hover li:hover a i {
@@ -1221,8 +1221,8 @@ ol {
 }
 
 .product__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #E18AAC;
+	border-color: #E18AAC;
 }
 
 .product__item__pic__hover li:hover a i {
@@ -1420,7 +1420,7 @@ ol {
 }
 
 .filter__option span:hover {
-	color: #7fad39;
+	color: #E18AAC;
 }
 
 .product__item {
@@ -1461,8 +1461,8 @@ ol {
 }
 
 .product__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #E18AAC;
+	border-color: #E18AAC;
 }
 
 .product__item__pic__hover li:hover a i {
@@ -1542,8 +1542,8 @@ ol {
 
 .product__pagination a:hover,
 .blog__pagination a:hover {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #E18AAC;
+	border-color: #E18AAC;
 	color: #ffffff;
 }
 
@@ -2052,8 +2052,8 @@ ol {
 }
 
 .checkout__input__checkbox label input:checked~.checkmark {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #E18AAC;
+	border-color: #E18AAC;
 }
 
 .checkout__input__checkbox label input:checked~.checkmark:after {
@@ -2280,7 +2280,7 @@ ol {
 }
 
 .blog__sidebar__item ul li a:hover {
-	color: #7fad39;
+	color: #E18AAC;
 }
 
 .blog__sidebar__search {
@@ -2500,7 +2500,7 @@ ol {
 }
 
 .blog__details__widget .blog__details__social a:hover {
-	color: #7fad39;
+	color: #E18AAC;
 }
 
 .blog__details__widget .blog__details__social a:last-child {
@@ -2545,7 +2545,7 @@ ol {
 
 .contact__widget span {
 	font-size: 36px;
-	color: #7fad39;
+	color: #E18AAC;
 }
 
 .contact__widget h4 {
@@ -2584,7 +2584,7 @@ ol {
 
 .map .map-inside i {
 	font-size: 48px;
-	color: #7fad39;
+	color: #E18AAC;
 	position: absolute;
 	bottom: -75px;
 	left: 50%;
@@ -2841,7 +2841,7 @@ ol {
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
-		background: #7fad39;
+		background: #E18AAC;
 		font-size: 10px;
 		color: #ffffff;
 		line-height: 13px;
@@ -2907,7 +2907,7 @@ ol {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
-		color: #7fad39;
+		color: #E18AAC;
 	}
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
@@ -3098,7 +3098,7 @@ ol {
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
-		background: #7fad39;
+		background: #E18AAC;
 		font-size: 10px;
 		color: #ffffff;
 		line-height: 13px;
@@ -3164,7 +3164,7 @@ ol {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
-		color: #7fad39;
+		color: #E18AAC;
 	}
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
