--- a/css/style.css
+++ b/css/style.css
@@ -2126,7 +2126,7 @@ ol {
 	border: 1px solid #ebebeb;
 	padding-left: 20px;
 	font-size: 16px;
-	color: #b2b2b2;
+	color: #0f0f0f;
 	border-radius: 4px;
 }
 
